smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-empty-namespace.smithy
// Parse error at line 4, column 5 near `#`: Unexpected syntax
$version: "0.3.0"

use #
